apps/resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service
  namespace: default
spec:
  selector:
    app: resume
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
